--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  google_fonts: 6.1.0
+  google_fonts: ^6.2.1
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.10+1
 
